--- a/.htaccess
+++ b/.htaccess
@@ -9,3 +9,5 @@ RewriteRule ^(.*)$ http://%{HTTP_HOST}/$1/ [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteCond %{REQUEST_FILENAME} !-d 
 RewriteRule . index.php [L,QSA]
+php_value expose_php Off
+php_flag expose_php Off
