--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Options +FollowSymLinks
 DirectoryIndex index.php index.html
 RewriteEngine On
 RewriteCond %{REQUEST_URI} ^/[^.]+[^/]$
-RewriteRule ^(.*)$ http://%{HTTP_HOST}/$1/ [R=301,L]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1/ [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteCond %{REQUEST_FILENAME} !-d 
 RewriteRule . index.php [L,QSA]
