--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,8 @@ Options -Indexes
 Options +FollowSymLinks
 DirectoryIndex index.php index.html
 RewriteEngine On
-RewriteCond %{HTTPS} !=on
-RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+RewriteCond %{SERVER_PORT} ^80$
+RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 RewriteCond %{REQUEST_URI} ^/[^.]+[^/]$
 RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1/ [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f 
