--- a/_admin/.htaccess
+++ b/_admin/.htaccess
@@ -1,3 +1,3 @@
-#RewriteEngine on
-#RewriteCond %{ENV:HTTPS} !1
-#RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+RewriteEngine on
+RewriteCond %{HTTP_X_HTTPS} !1
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
