--- a/_admin/.htaccess
+++ b/_admin/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond %{HTTP_X_HTTPS} !1
+RewriteCond %{HTTP_X_HTTPS} !"1"
 RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
