Выровнял содержимое htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,5 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1/ [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f 
 RewriteCond %{REQUEST_FILENAME} !-d 
 RewriteRule . index.php [L,QSA]
+AddDefaultCharset utf-8
+AddType 'text/html; charset=utf-8' .html .htm .shtml
