--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "addons/ckeditor"]
 	path = addons/ckeditor
 	url = https://github.com/ckeditor/ckeditor-releases.git
+[submodule "addons/phpmailer"]
+	path = addons/phpmailer
+	url = https://github.com/PHPMailer/PHPMailer.git
