Деплой через отдельный скрипт

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "starkeen/culttourism",
     "authors": [
         {
-            "name": "production",
+            "name": "culttourism",
             "email": "andrey@culttourism.ru"
         }
     ],
