--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,16 @@
 *.xls
 *.csv
 *.log
-css/ct-*.css
-js/ct-*.js
-templates_c/
-config/configuration.php
-data/private/
-data/feed/
-data/images/
-data/images/*.jpg
-data/photos/
-data/_thumbs/
-vendor/
-sitemap.xml
-robots.txt
+/css/ct-*.css
+/js/ct-*.js
+/templates_c/
+/config/configuration.php
+/data/private/
+/data/feed/
+/data/images/
+/data/images/*.jpg
+/data/photos/
+/data/_thumbs/
+/vendor/
+/sitemap.xml
+/robots.txt
