phpmailer добавил в composer

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
         }
     ],
     "require": {
-        "iamsalnikov/mdash": "^3.5",
-        "smarty/smarty": "^3.1"
+        "smarty/smarty": "^3.1",
+        "phpmailer/phpmailer": "^5.2",
+        "iamsalnikov/mdash": "^3.5"
     },
     "require-dev": {}
 }
