--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "require": {
         "smarty/smarty": "^3.1",
         "phpmailer/phpmailer": "^5.2",
+        "ezyang/htmlpurifier": "^4.7",
         "iamsalnikov/mdash": "^3.5"
     },
     "require-dev": {}
