--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,11 @@ DirectoryIndex index.php index.html
 php_value expose_php Off
 php_flag expose_php Off
 
+AddType application/vnd.ms-fontobject .eot
+AddType font/ttf .ttf
+AddType font/otf .otf
+AddType application/x-font-woff .woff
+
 
 RewriteEngine On
 RewriteCond %{REQUEST_URI} ^/[^.]+[^/]$
