Добавил Sentry в composer

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,22 @@
         "smarty/smarty": "^3.1",
         "phpmailer/phpmailer": "^5.2",
         "ezyang/htmlpurifier": "^4.7",
+        "sentry/sentry": "^1.5",
         "iamsalnikov/mdash": "^3.5"
     },
-    "require-dev": {}
+    "require-dev": {},
+    "autoload": {
+        "psr-0": {
+            "": ""
+        },
+        "classmap": [],
+        "files": [
+            "includes/functions.php",
+            "includes/debug.php"
+        ],
+        "exclude-from-classmap": [
+            "/modules/",
+            "/tests/"
+        ]
+    }
 }
