Поправил ошибки генерации CDATA, see #62

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "require-dev": {},
     "autoload": {
         "psr-0": {
+            "": ""
+        },
+        "psr-4": {
             "": "src"
         },
         "classmap": [
