Bitly через Guzzle, see #63

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "phpmailer/phpmailer": "^5.2",
         "ezyang/htmlpurifier": "^4.7",
         "sentry/sentry": "^1.5",
+        "guzzlehttp/guzzle": "^6.2",
         "iamsalnikov/mdash": "^3.5"
     },
     "require-dev": {},
