Проверка на спам на стороне сервера

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
             "": ""
         },
         "psr-4": {
+            "app\\": "src/includes/",
+            "exceptions\\": "src/exceptions/",
             "": "src/"
         },
         "classmap": [
