--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "guzzlehttp/guzzle": "^6.2",
         "iamsalnikov/mdash": "^3.5"
     },
-    "require-dev": {},
+    "require-dev": {
+        "phpunit/phpunit": "^6.1"
+    },
     "autoload": {
         "psr-0": {
             "": ""
