Неймспейс для тестов

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "psr-4": {
             "app\\": "src/",
             "exceptions\\": "src/exceptions/",
+            "tests\\": "tests/",
             "": ""
         },
         "classmap": [
