--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,4 +14,4 @@ pipelines:
           - apt-get update && apt-get install -y unzip
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
           - composer install
-          - vendor/bin/phpunit tests
+          - vendor/bin/phpunit -c tests/phpunit.xml tests/
