Revert "Merged in task-67 (pull request #13)"
This reverts commit 92cf241883942adb7261c300f305576ffad2c02d, reversing
changes made to 070c8c0cade1dc3147b6ef76da66910136a5ab58.

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "autoload"    : {
         "psr-4"                 : {
             "app\\"        : "src/",
+            "exceptions\\" : "src/exceptions/",
             "tests\\"      : "tests/",
             ""             : ""
         },
