--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,15 @@ php_flag expose_php Off
 
 
 RewriteEngine On
+
+RewriteCond %{HTTPS} off
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
+RewriteCond %{HTTPS} on
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+
 RewriteCond %{REQUEST_URI} ^/[^.]+[^/]$
 RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1/ [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f
