--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,23 @@
         }
     ],
     "require"     : {
+        "php"                 : ">7.1.0",
         "smarty/smarty"       : "3.1.29",
         "phpmailer/phpmailer" : "^5.2",
         "ezyang/htmlpurifier" : "^4.7",
         "sentry/sentry"       : "^1.5",
         "guzzlehttp/guzzle"   : "^6.2",
-        "iamsalnikov/mdash"   : "^3.5"
+        "iamsalnikov/mdash"   : "^3.5",
+        "ext-SimpleXML"       : "*"
     },
     "require-dev" : {
         "phpunit/phpunit" : "^6.1"
     },
     "autoload"    : {
         "psr-4"                 : {
-            "app\\"        : "src/",
-            "tests\\"      : "tests/",
-            ""             : ""
+            "app\\"   : "src/",
+            "tests\\" : "tests/",
+            ""        : ""
         },
         "classmap"              : [
             "includes/",
