--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "sentry/sentry"       : "^1.5",
         "guzzlehttp/guzzle"   : "^6.2",
         "iamsalnikov/mdash"   : "^3.5",
+        "ext-pdo"             : "*",
         "ext-SimpleXML"       : "*"
     },
     "require-dev" : {
