--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "require"     : {
         "php"                 : ">7.1.0",
-        "smarty/smarty"       : "3.1.29",
+        "smarty/smarty"       : ">3.1.30",
         "phpmailer/phpmailer" : "^5.2",
         "ezyang/htmlpurifier" : "^4.7",
         "sentry/sentry"       : "^1.5",
