--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "require"     : {
         "php"                 : ">7.2.0",
-        "smarty/smarty"       : ">3.1.30",
+        "smarty/smarty"       : "^3.1",
         "phpmailer/phpmailer" : "^6.0",
         "ezyang/htmlpurifier" : "^4.7",
         "sentry/sentry"       : "^1.5",
