Добавил тип лицензии в composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name"        : "starkeen/culttourism",
+    "license": "MIT",
     "authors"     : [
         {
             "name"  : "culttourism",
