Конфигурация для запуска в docker

--- a/.gitignore
+++ b/.gitignore
@@ -10,21 +10,23 @@
 .idea
 ct-*.css
 ct-*.js
-templates_c/
-templates_cache/
+sitemap.xml
+robots.txt
+.env
 /config/configuration.php
+/config/DOMAIN
+/docker/mariadb/data/
 /data/private/
 /data/feed/*
 /data/images/
 /data/photos/
 /data/_thumbs/
+/data/file/
+/data/files/
+/data/logs/
+/data/store/
+/templates_c/
+/templates_cache/
+/templates/sys/
+/var/logs/
 /vendor/
-sitemap.xml
-robots.txt
-data/file/
-data/files/
-data/logs/
-data/store/
-templates/sys/
-.env
-docker/mariadb/data
