--- a/docker/php/httpd.conf
+++ b/docker/php/httpd.conf
@@ -29,7 +29,11 @@ LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 
 LoadModule mpm_event_module modules/mod_mpm_event.so
 
-ServerAdmin you@example.com
+ServerAdmin starkeen@gmail.com
+
+ErrorLog /var/log/httpd/error_log
+LogFormat "%h %l %u %t \"%r\" %>s %b" common
+CustomLog /var/log/httpd/access_log common
 
 <Directory />
     AllowOverride none
@@ -38,7 +42,7 @@ ServerAdmin you@example.com
 
 DocumentRoot "/var/www/html"
 <Directory "/var/www/html">
-    Options Indexes FollowSymLinks Includes ExecCGI
+    Options +FollowSymLinks +Includes +ExecCGI -Indexes
     AllowOverride All
     Require all granted
 </Directory>
@@ -49,9 +53,7 @@ DocumentRoot "/var/www/html"
 </IfModule>
 
 <IfModule dir_module>
-    DirectoryIndex index.php index.pl index.cgi index.asp index.shtml index.html index.htm \
-                   default.php default.pl default.cgi default.asp default.shtml default.html default.htm \
-                   home.php home.pl home.cgi home.asp home.shtml home.html home.htm
+    DirectoryIndex index.php
 </IfModule>
 
 <Files ".ht*">
@@ -90,11 +92,6 @@ DocumentRoot "/var/www/html"
     AddOutputFilter INCLUDES .shtml
 </IfModule>
 
-#
-# Настройка FPM
-#
-<IfModule proxy_module>
-    <FilesMatch "\.php$">
-        SetHandler  "proxy:fcgi://php:9000"
-    </FilesMatch>
-</IfModule>
+<FilesMatch \.php$>
+    SetHandler application/x-httpd-php
+</FilesMatch>
