--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,19 @@
 version: '3'
 
 services:
-    apache:
-        image: httpd:2.4
-        volumes:
-            - ./:/var/www/html:z
-            - ./docker/httpd/httpd.conf:/usr/local/apache2/conf/httpd.conf:z
-        depends_on:
-            - php
-
-    nginx:
-        image: nginx:1.13
+    app:
+        build:
+            ./docker/php
         ports:
             - 80:80
         volumes:
-            - ./:/var/www/html
-            - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-        depends_on:
-            - apache
-
-    php:
-        build:
-            ./docker/php
-        volumes:
-            - ./:/var/www/html
+            - ./public:/var/www/html:z
+            - ./var/logs/httpd:/var/log/httpd:z
+            - ./var/logs/php:/var/log/php
+            - ./docker/php/httpd.conf:/usr/local/apache2/conf/httpd.conf:z
             - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+        environment:
+            DIRECTORY_ROOT: ${DIRECTORY_ROOT}
         depends_on:
             - mariadb
 
@@ -34,9 +23,9 @@ services:
         volumes:
             - ./docker/mariadb/data:/var/lib/mysql:z
         environment:
-            MYSQL_ROOT_PASSWORD: qwerty
-            MYSQL_DATABASE: 'cult'
-            MYSQL_USER: 'cult_user'
-            MYSQL_PASSWORD: 'cult_password'
+            MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+            MYSQL_DATABASE: ${DB_DATABASE}
+            MYSQL_USER: ${DB_USER}
+            MYSQL_PASSWORD: ${DB_PASSWORD}
         ports:
             - 3306:3306
