--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,3 +1,10 @@
 FROM php:7.2-apache
-RUN apt-get update
-RUN docker-php-ext-install pdo pdo_mysql mysqli
+RUN apt-get update && apt-get install -y \
+                          curl \
+                          wget \
+                          git \
+                          libfreetype6-dev \
+                          libjpeg62-turbo-dev \
+                          libmcrypt-dev
+RUN docker-php-ext-install -j$(nproc) mbstring pdo_mysql tokenizer iconv mysqli
+RUN a2enmod rewrite
