--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,5 +6,5 @@ RUN apt-get update && apt-get install -y \
                           libfreetype6-dev \
                           libjpeg62-turbo-dev \
                           libmcrypt-dev
-RUN docker-php-ext-install -j$(nproc) mbstring pdo_mysql tokenizer iconv mysqli
+RUN docker-php-ext-install -j$(nproc) mbstring pdo pdo_mysql tokenizer iconv mysqli
 RUN a2enmod rewrite
