--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -12,6 +12,8 @@ post_max_size=40M
 memory_limit = 128M
 allow_url_fopen = On
 
+pdo_mysql.default_socket="/var/run/mysqld/mysqld.sock"
+
 [mbstring]
 mbstring.internal_encoding = UTF-8
 
