--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle"   : "^6.5",
         "iamsalnikov/mdash"   : "^3.5",
         "ganlvtech/kcaptcha"  : "^1.0",
+        "symfony/dotenv"      : "^5.0",
         "ext-pdo"             : "*",
         "ext-curl"            : "*",
         "ext-SimpleXML"       : "*",
