--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "guzzlehttp/guzzle"   : "^6.5",
         "iamsalnikov/mdash"   : "^3.5",
         "ganlvtech/kcaptcha"  : "^1.0",
-        "symfony/dotenv"      : "^5.0",
+        "vlucas/phpdotenv"    : "^4.1",
         "ext-pdo"             : "*",
         "ext-curl"            : "*",
         "ext-SimpleXML"       : "*",
