--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ image: php:7.2.15
 pipelines:
   default:
     - step:
+        name: Unit tests
         caches:
           - composer
         script:
@@ -15,3 +16,11 @@ pipelines:
           - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
           - composer install
           - vendor/bin/phpunit -c tests/phpunit.xml tests/
+
+    - step:
+          name: Sentry code report
+          script:
+              - pipe: sentryio/sentry-code-report:0.0.6
+                variables:
+                    SENTRY_ORG: 'e3bccedd75864d36ab2a0cf1e0273737'
+                    SENTRY_PROJECT_ID: 114324
