--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,3 @@
-# This is a sample build configuration for PHP.
-# Check our guides at https://confluence.atlassian.com/x/e8YWN for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
 image: php:7.2.15
 
 pipelines:
@@ -17,20 +12,27 @@ pipelines:
                     - composer install
                     - vendor/bin/phpunit -c tests/phpunit.xml tests/
 
-#        -   step:
-#                name: Sentry code report
-#                script:
-#                    -   pipe: sentryio/sentry-code-report:0.0.6
-#                        variables:
-#                            SENTRY_ORG: 'starkeen-culttourism'
-#                            SENTRY_PROJECT_ID: 114324
+    branches:
+        master:
+            - step:
+                  name: Deploy
+                  script:
+                      - echo "This script runs only on commit to the master branch."
 
-        - step:
-              name: Sentry release notification
-              script:
-                  -   pipe: sentryio/sentry-new-release:0.1.1
-                      variables:
-                          SENTRY_AUTH_TOKEN: $SENTRY_AUTH_TOKEN
-                          SENTRY_ORG: 'starkeen'
-                          SENTRY_PROJECT: 'culttourismru'
-                          DEBUG: 'true'
+            - step:
+                  name: Sentry release notification
+                  script:
+                      -   pipe: sentryio/sentry-new-release:0.1.1
+                          variables:
+                              SENTRY_AUTH_TOKEN: $SENTRY_AUTH_TOKEN
+                              SENTRY_ORG: 'starkeen'
+                              SENTRY_PROJECT: 'culttourismru'
+                              DEBUG: 'true'
+
+            - step:
+                  name: Sentry code report
+                  script:
+                      -   pipe: sentryio/sentry-code-report:0.0.6
+                          variables:
+                              SENTRY_ORG: 'starkeen'
+                              SENTRY_PROJECT_ID: 114324
