--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,38 +1,49 @@
 image: php:7.2.15
 
+definitions:
+    steps:
+        - step: &unit-tests
+              name: Unit tests
+              caches:
+                  - composer
+              script:
+                  - apt-get update && apt-get install -y unzip
+                  - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+                  - composer install
+                  - vendor/bin/phpunit -c tests/phpunit.xml tests/
+        - step: &deploy
+              name: Deploy
+              script:
+                  - echo "Deploy dummy"
+        - step: &deploy-release-notification
+              name: Sentry release notification
+              script:
+                  -   pipe: sentryio/sentry-new-release:0.1.1
+                      variables:
+                          SENTRY_AUTH_TOKEN: $SENTRY_AUTH_TOKEN
+                          SENTRY_ORG: 'starkeen'
+                          SENTRY_PROJECT: 'culttourismru'
+                          DEBUG: 'true'
+
+        - step: &sentry-code-report
+              name: Sentry code report
+              script:
+                  -   pipe: sentryio/sentry-code-report:0.0.6
+                      variables:
+                          SENTRY_ORG: 'starkeen'
+                          SENTRY_PROJECT_ID: 114324
+
 pipelines:
     default:
-        -   step:
-                name: Unit tests
-                caches:
-                    - composer
-                script:
-                    - apt-get update && apt-get install -y unzip
-                    - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-                    - composer install
-                    - vendor/bin/phpunit -c tests/phpunit.xml tests/
+        - step:
+              <<: *unit-tests
+              name: Unit tests on branch
 
     branches:
         master:
+#            - step: *sentry-code-report
             - step:
-                  name: Deploy
-                  script:
-                      - echo "This script runs only on commit to the master branch."
-
-            - step:
-                  name: Sentry release notification
-                  script:
-                      -   pipe: sentryio/sentry-new-release:0.1.1
-                          variables:
-                              SENTRY_AUTH_TOKEN: $SENTRY_AUTH_TOKEN
-                              SENTRY_ORG: 'starkeen'
-                              SENTRY_PROJECT: 'culttourismru'
-                              DEBUG: 'true'
-
-#            - step:
-#                  name: Sentry code report
-#                  script:
-#                      -   pipe: sentryio/sentry-code-report:0.0.6
-#                          variables:
-#                              SENTRY_ORG: 'starkeen'
-#                              SENTRY_PROJECT_ID: 114324
+                  <<: *unit-tests
+                  name: Unit tests on Master
+            - step: *deploy
+            - step: *deploy-release-notification
