Настройка докера для xdebug

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -7,4 +7,5 @@ RUN apt-get update && apt-get install -y \
                           libjpeg62-turbo-dev \
                           libmcrypt-dev
 RUN docker-php-ext-install -j$(nproc) mbstring pdo pdo_mysql tokenizer iconv mysqli
+RUN pecl install xdebug-2.6.1 && docker-php-ext-enable xdebug
 RUN a2enmod rewrite
