--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "ext-pdo"             : "*",
         "ext-curl"            : "*",
         "ext-SimpleXML"       : "*",
-        "ext-json"            : "*"
+        "ext-json"            : "*",
+        "ext-fileinfo"        : "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
