--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,22 @@
         }
     ],
     "require"    : {
-        "php"                 : ">7.2.0",
-        "smarty/smarty"       : "^3.1",
-        "phpmailer/phpmailer" : "^6.0",
-        "ezyang/htmlpurifier" : "^4.7",
-        "sentry/sdk"          : "^2.1",
-        "guzzlehttp/guzzle"   : "^6.5",
-        "fanamurov/mdash"     : "^1.0",
-        "ganlvtech/kcaptcha"  : "^1.0",
-        "vlucas/phpdotenv"    : "^4.1",
-        "myclabs/php-enum"    : "^1.7",
-        "ext-pdo"             : "*",
-        "ext-curl"            : "*",
-        "ext-SimpleXML"       : "*",
-        "ext-json"            : "*",
-        "ext-fileinfo"        : "*"
+        "php"                : ">7.2.0",
+        "smarty/smarty"      : "^3.1",
+        "phpmailer/phpmailer": "^6.0",
+        "ezyang/htmlpurifier": "^4.7",
+        "sentry/sdk"         : "^2.1",
+        "guzzlehttp/guzzle"  : "^6.5",
+        "fanamurov/mdash"    : "^1.0",
+        "ganlvtech/kcaptcha" : "^1.0",
+        "vlucas/phpdotenv"   : "^4.1",
+        "myclabs/php-enum"   : "^1.7",
+        "ext-pdo"            : "*",
+        "ext-curl"           : "*",
+        "ext-SimpleXML"      : "*",
+        "ext-json"           : "*",
+        "ext-fileinfo"       : "*",
+        "ext-dom"            : "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
