--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,7 +10,7 @@ definitions:
                   - apt-get update && apt-get install -y unzip
                   - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
                   - composer install
-                  - vendor/bin/phpunit -c tests/phpunit.xml tests/
+                  - make test
         - step: &deploy
               name: Deploy
               script:
