--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,8 +8,7 @@ definitions:
                   - composer
               script:
                   - apt-get update && apt-get install -y unzip
-                  - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-                  - composer install
+                  - make vendor
                   - make test
         - step: &deploy
               name: Deploy
