--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ sitemap.xml
 robots.txt
 .phpunit.result.cache
 .env
+.scannerwork
 /config/configuration.php
 /config/DOMAIN
 /docker/mariadb/data/
@@ -27,6 +28,7 @@ robots.txt
 /data/logs/
 /data/store/
 /data/tmp/
+/build/
 /templates_c/
 /templates_cache/
 /templates/sys/
