--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=culttourism
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
-sonar.exclusions=**/vendor/**,**/addons/**,**/_utils/**,**/bin/**
+sonar.exclusions=**/vendor/**,**/addons/**,**/bin/**
 sonar.php.file.suffixes=php
-sonar.php.exclusions=**/vendor/**,**/*.js
+sonar.php.exclusions=**/vendor/**,**/*.js,**/tests/**
 sonar.php.coverage.reportPaths=build/clover.xml
 sonar.test.exclusions=**/vendor/**,**/tests/**
-sonar.coverage.exclusions=build/clover.xml,**.js
+sonar.coverage.exclusions=build/clover.xml,**.js,**/tests/**,**/cron/**,**/admin/**,**/addons/**,**/config/**,,**/data/**
