--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "ext-dom"            : "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "roave/security-advisories": "dev-master",
+        "phpunit/phpunit"          : "^8.0"
     },
     "autoload"   : {
         "psr-4"                : {
