Выключил чужой код из анализа

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.exclusions=**/vendor/**,**/addons/**,**/bin/**
 sonar.php.file.suffixes=php
-sonar.php.exclusions=**/vendor/**,**/*.js,**/tests/**
+sonar.php.exclusions=**/vendor/**,**/*.js,**/tests/**,**/addons/**
 sonar.php.coverage.reportPaths=build/clover.xml
 sonar.test.exclusions=**/vendor/**,**/tests/**
 sonar.coverage.exclusions=build/clover.xml,**.js,**/tests/**,**/cron/**,**/admin/**,**/addons/**,**/config/**,,**/data/**
