Добавил несколько параметров в сборку

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=culttourism
+sonar.projectName=CultTourism
 sonar.sourceEncoding=UTF-8
+sonar.scm.provider=git
 sonar.sources=.
+sonar.tests=./tests/
 sonar.exclusions=**/vendor/**,**/addons/**,**/bin/**
 sonar.php.file.suffixes=php
 sonar.php.exclusions=**/vendor/**,**/*.js,**/tests/**,**/addons/**
