--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require"    : {
-        "php"                : ">7.4.0",
+        "php"                : "^7.4",
         "smarty/smarty"      : "^3.1",
         "phpmailer/phpmailer": "^6.0",
         "ezyang/htmlpurifier": "^4.7",
