Модуль выдачи картинки для шаринга

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "ext-json"           : "*",
         "ext-fileinfo"       : "*",
         "ext-iconv"          : "*",
+        "ext-gd"             : "*",
         "ext-dom"            : "*"
     },
     "require-dev": {
