--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,8 @@ definitions:
           - composer
         script:
           - apt-get update && apt-get install -y unzip
+          - docker-php-ext-configure gd --with-jpeg
+          - docker-php-ext-install -j$(nproc) gd
           - make vendor
           - make test
     -
