--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ definitions:
         caches:
           - composer
         script:
-          - apt-get update && apt-get install -y unzip
+          - apt-get update && apt-get install -y unzip libfreetype6-dev libjpeg62-turbo-dev
           - docker-php-ext-configure gd --with-jpeg
           - docker-php-ext-install -j$(nproc) gd
           - make vendor
