Добавил traffic-advice

--- a/.htaccess
+++ b/.htaccess
@@ -22,3 +22,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L,QSA]
 php_value default_charset utf-8
 AddType 'text/html; charset=utf-8' .html .htm .shtml
+
+RewriteRule ^\.well-known/traffic-advice$ - [T=application/trafficadvice+json,END]
