--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,15 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^10.5"
     },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true
+        },
+        "optimize-autoloader": true,
+        "platform": {
+            "php": "8.1.26"
         }
     },
     "autoload": {
