Обновил образ Docker

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y \
                           libonig-dev \
                           libmcrypt-dev
 RUN docker-php-ext-configure gd --with-jpeg
-RUN docker-php-ext-install -j$(nproc) mbstring pdo pdo_mysql tokenizer iconv mysqli gd fileinfo
-RUN pecl install xdebug-3.0.1 && docker-php-ext-enable xdebug
+RUN docker-php-ext-install -j$(nproc) mbstring pdo pdo_mysql iconv mysqli gd fileinfo
+RUN pecl install xdebug \
+    && docker-php-ext-enable xdebug
 RUN a2enmod rewrite
