--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=culttourism
+sonar.projectKey=starkeen_culttourism
 sonar.projectName=CultTourism
 sonar.sourceEncoding=UTF-8
 sonar.scm.provider=git
