Исправил конфиг sonarQube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=starkeen_culttourism
+sonar.organization=starkeen
 sonar.projectName=CultTourism
 sonar.sourceEncoding=UTF-8
 sonar.scm.provider=git
