--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           port: ${{ secrets.DEPLOY_PORT }}
           key: ${{ secrets.DEPLOY_SSHKEY }}
-          run: cd ${{ secrets.DEPLOY_PATH }} && make deploy
+          script: cd ${{ secrets.DEPLOY_PATH }} && make deploy
 
   sentry:
     name: Sentry
