Очистка кэша при деплое

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,7 +6,8 @@ RUN apt-get update && apt-get install -y \
                           libfreetype6-dev \
                           libjpeg62-turbo-dev \
                           libonig-dev \
-                          libmcrypt-dev
+                          libmcrypt-dev \
+    && apk cache clean
 RUN docker-php-ext-configure gd --with-jpeg
 RUN docker-php-ext-install -j$(nproc) mbstring pdo pdo_mysql iconv mysqli gd fileinfo
 RUN pecl install xdebug \
