--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,12 @@
         "ext-dom": "*"
     },
     "require-dev": {
+        "phpstan/phpstan": "1.*",
+        "phpunit/phpunit": "^10.5",
+        "phpmd/phpmd": "^2.15",
+        "squizlabs/php_codesniffer": "^3.8",
         "roave/security-advisories": "dev-master",
-        "phpunit/phpunit": "^10.5"
+        "friendsofphp/php-cs-fixer": "^3.41"
     },
     "config": {
         "allow-plugins": {
