--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "phpunit/phpunit": "^10.5",
         "phpmd/phpmd": "^2.15",
         "squizlabs/php_codesniffer": "^3.8",
-        "roave/security-advisories": "dev-master",
+        "roave/security-advisories": "dev-latest",
         "friendsofphp/php-cs-fixer": "^3.41"
     },
     "config": {
