Настройка docker для PHP8.2

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -14,9 +14,6 @@ allow_url_fopen = On
 
 pdo_mysql.default_socket="/var/run/mysqld/mysqld.sock"
 
-[mbstring]
-mbstring.internal_encoding = UTF-8
-
 [Errors]
 error_reporting = E_ALL
 display_errors = On
@@ -36,12 +33,10 @@ default_charset = "UTF-8"
 
 [xdebug]
 zend_extension=xdebug.so
-xdebug.profiler_enable=1
-xdebug.remote_enable=1
+xdebug.mode=profile,debug,coverage
 xdebug.remote_handler=dbgp
-xdebug.remote_mode=req
-xdebug.remote_host=host.docker.internal
-xdebug.remote_port=9000
-xdebug.remote_autostart=1
-xdebug.remote_connect_back=1
+xdebug.client_host=host.docker.internal
+xdebug.client_port=9000
+xdebug.start_with_request=yes
+xdebug.discover_client_host=true
 xdebug.idekey=PHPSTORM
