--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "php": "^8.1 || ^8.2",
+        "php": "^8.2",
         "smarty/smarty": "^4.2",
         "phpmailer/phpmailer": "^6.0",
         "ezyang/htmlpurifier": "^4.7",
