--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "php": "^8.2",
+        "php": "^8.1 || ^8.2",
         "smarty/smarty": "^4.2",
         "phpmailer/phpmailer": "^6.0",
         "ezyang/htmlpurifier": "^4.7",
@@ -18,6 +18,7 @@
         "vlucas/phpdotenv": "^4.1",
         "myclabs/php-enum": "^1.7",
         "starkeen/yandex-search-api": "^1.2",
+        "hflabs/dadata": "^22.3",
         "ext-pdo": "*",
         "ext-curl": "*",
         "ext-SimpleXML": "*",
